force-app/main/default/objects/GTM_Page_Content_Version__c/GTM_Page_Content_Version__c.object-meta.xml
<CustomObject>
    <label>GTM Page Content Version</label>
    <nameField>
        <displayFormat>PCV-{0000}</displayFormat>
        <label>Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GTM Page Content Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>