force-app/main/default/objects/GTM_Page_Content_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>Version number for this snapshot</description>
    <label>Version Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>